[project]
name = "devops-toolkit"
version = "0.2.0"
description = "CLI toolkit for cloud resource cleanup, concurrent health probing, PDB-safe node draining, GitOps drift detection, cost anomaly detection, secret rotation, and guardrailed chaos experiments"
authors = [{ name = "Jaihind Nishad", email = "jaihindnishad@gmail.com" }]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
aws = ["boto3>=1.34"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
devops-toolkit = "devops_toolkit.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["devops_toolkit*"]

[tool.ruff]
line-length = 110
